--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,10 @@ add_library(cppkit SHARED source/ck_byte_ptr.cpp
                           source/ck_sprintf.cpp
                           source/ck_stack_trace.cpp
                           source/ck_string.cpp
-                          source/ck_time_utils.cpp)
+                          source/ck_time_utils.cpp
+                          source/ck_uuid_utils.cpp
+                          source/ck_variant.cpp
+                          source/ck_json.cpp)
 
 if(${UNIX})
 target_link_libraries(cppkit pthread)
