--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -25,6 +25,8 @@ add_executable(ut source/framework.cpp
                   source/ck_socket_test.cpp
                   source/ck_string_test.cpp
                   source/condition_variable_test.cpp
-                  source/recursive_mutex_test.cpp)
+                  source/recursive_mutex_test.cpp
+                  source/ck_variant_test.cpp
+                  source/ck_json_test.cpp)
 
 target_link_libraries(ut cppkit)
