--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(ut source/framework.cpp
                   source/ck_dynamic_library_test.cpp
                   source/ck_actor_test.cpp
                   source/ck_command_queue_test.cpp
-                  source/ck_memory_map_test.cpp)
+                  source/ck_memory_map_test.cpp
+                  source/ck_path_test.cpp)
 
 target_link_libraries(ut cppkit)
