--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,9 @@ add_library(cppkit SHARED source/ck_library_id.cpp
                           source/ck_actor.cpp
                           source/ck_command_queue.cpp
                           source/ck_memory_map.cpp
-                          source/ck_path.cpp)
+                          source/ck_path.cpp
+                          source/ck_udp_sender.cpp
+                          source/ck_udp_receiver.cpp)
 
 if(${UNIX})
 target_link_libraries(cppkit pthread rt dl)
