--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(ut source/framework.cpp
                   source/ck_command_queue_test.cpp
                   source/ck_memory_map_test.cpp
                   source/ck_path_test.cpp
-                  source/ck_udp_receiver_test.cpp)
+                  source/ck_udp_receiver_test.cpp
+                  source/ck_udp_sender_test.cpp)
 
 target_link_libraries(ut cppkit)
