--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 compiler:
-  - gcc
+  - clang
 before_install:
   - sudo apt-get install cmake
 before_script:
@@ -8,5 +8,16 @@ before_script:
 script:
   - cd ./build
   - cmake ..
-  - make
+  - teapot -c travis fetch
+  - teapot -c travis run variant-debug compiler-clang-3.2
+install:
+# libstdc++-4.8-dev
+  - sudo add-apt-repository --yes ppa:ubuntu-toolchain-r/test
+# clang++-3.2
+  - sudo add-apt-repository --yes ppa:h-rayflood/llvm
+  - sudo apt-get -qq update
+  - sudo apt-get -qq install libstdc++-4.8-dev clang-3.2
+# ruby 2.0 and teapot
+  - rvm use 2.0 --install --binary --fuzzy
+  - gem install teapot
 
