--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: cpp
 
 compiler:
   - gcc
-  - clang
 
 before_install:
   - sudo apt-get install cmake
@@ -26,9 +25,16 @@ install:
 
 before_script:
   - mkdir ./build
+  - mkdir ./ut/build
 
 script:
   - cd ./build
   - cmake ..
   - make
+  - make install
+  - cd ../ut/build
+  - cmake ..
+  - make
+  - ./ut
+  
 
