--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ set(SOURCES source/ck_library_id.cpp
             source/ck_memory_map.cpp
             source/ck_path.cpp
             source/ck_udp_sender.cpp
-            source/ck_udp_receiver.cpp)
+            source/ck_udp_receiver.cpp
+            source/ck_timer.cpp)
 
 set(WINDOWS_LIBS DbgHelp ws2_32 iphlpapi)
 set(LINUX_LIBS pthread rt dl)
