added ck_bitsy and tests.

--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -24,7 +24,8 @@ set(SOURCES source/framework.cpp
             source/ck_udp_sender_test.cpp
             source/ck_string_slice_test.cpp
             source/ck_timer_test.cpp
-            source/ck_statistics_test.cpp)
+            source/ck_statistics_test.cpp
+            source/ck_bitsy_test.cpp)
 
 set(COMMON_LIBS cppkit)
 set(WINDOWS_LIBS DbgHelp ws2_32 iphlpapi)
