--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ file(MAKE_DIRECTORY ../devel_artifacts)
 include(cmake/common.cmake NO_POLICY_SCOPE)
 include(cmake/base_lib.cmake NO_POLICY_SCOPE)
 
-install_files("../../devel_artifacts/build" cmake/base_lib.cmake)
-install_files("../../devel_artifacts/build" cmake/base_ut.cmake)
-install_files("../../devel_artifacts/build" cmake/base_app.cmake)
+install(FILES cmake/common.cmake DESTINATION "${devel_artifacts_path}/build")
+install(FILES cmake/base_lib.cmake DESTINATION "${devel_artifacts_path}/build")
+install(FILES cmake/base_ut.cmake DESTINATION "${devel_artifacts_path}/build")
+install(FILES cmake/base_app.cmake DESTINATION "${devel_artifacts_path}/build")
