Updated unit tests framework.

--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -31,4 +31,5 @@ set(SOURCES source/framework.cpp
 set(COMMON_LIBS cppkit)
 set(WINDOWS_LIBS DbgHelp ws2_32 iphlpapi)
 
+include(common.cmake NO_POLICY_SCOPE)
 include(../../devel_artifacts/build/base_ut.cmake)
