--- a/ut/CMakeLists.txt
+++ b/ut/CMakeLists.txt
@@ -26,7 +26,8 @@ set(SOURCES source/framework.cpp
             source/ck_timer_test.cpp
             source/ck_statistics_test.cpp
             source/ck_bitsy_test.cpp
-            source/ck_pool_test.cpp)
+            source/ck_pool_test.cpp
+            source/ck_file_lock_test.cpp)
 
 set(COMMON_LIBS cppkit)
 set(WINDOWS_LIBS DbgHelp ws2_32 iphlpapi)
